[gd_scene load_steps=2 format=3 uid="uid://cu8b35rjhcwkx"]

[ext_resource type="Script" path="res://Common/UI/achievement_notification/achievement_notification.gd" id="1_achievement_notification"]

[node name="AchievementNotification" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 120.0
script = ExtResource("1_achievement_notification")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Achievement Unlocked!"
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Achievement description"
autowrap_mode = 2

[node name="AutoHideTimer" type="Timer" parent="."]
one_shot = true
